--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,22 +1,3 @@
-html, body {
-    background-color: #252525;
-    font-size: 14px;
-    font-family: "PTSansNarrowRegular";
-    color: #404040;
-    margin: 0px;
-    padding: 0px;
-    height: 100%;
-}
-div#wrapper{
-    margin: 0px auto;
-    width: 1256px;
-    padding: 50px 0;
-    position:absolute; top:0; bottom:0; left:0; right:0;
-}
-div#content{
-    min-height:100%;
-    background-color: #fff;
-}
 .text-blue{
     color:#29ADB2;
 }
@@ -30,4 +11,120 @@ a{
     outline: none;
     text-decoration: none;
 }
+a.common-link{
+    color:#005f82;
+    font-size: 13px;
+}
+.fw_b{
+    font-weight: bold;
+}
+.sum{
+    color:#0093c8;
+}
+.currency{
+    font-size: 10px;
+    color: #005f82;
+}
 
+.fs20{
+    font-size: 20px;
+}
+.fs30{
+    font-size: 30px;
+}
+
+input[type=text]{
+    border: 1px solid #0093c8;
+    border-radius: 2px;
+    height: 22px;
+    padding: 0 5px;
+}
+input[type=text]:focus{
+    border-color:#404040;
+    /*border-radius: 5px;*/
+}
+input[type=text].error{
+    border-color:#f00;
+}
+
+
+div.clear{
+    border: 0 none;
+    clear: both;
+    float: none;
+    font-size: 0;
+    line-height: 0;
+    padding:0 !important;
+    margin:0 !important;
+    width: 100%
+}
+.h20{
+    height: 20px;
+}
+.h10{
+    height: 10px;
+}
+.h5{
+    height: 5px;
+}
+
+.float-left{
+    float: left;
+}
+.float-right{
+    float: right;
+}
+.ta_r{
+    text-align: right;
+}
+.ta_l{
+    text-align: left;
+}
+
+/* buttons */
+.button {
+	-moz-box-shadow:inset 0px 1px 0px 0px #0093c8;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #0093c8;
+	box-shadow:inset 0px 1px 0px 0px #0093c8;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #0093c8), color-stop(1, #005f82) );
+	background:-moz-linear-gradient( center top, #0093c8 5%, #005f82 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0093c8', endColorstr='#005f82');
+	background-color:#0093c8;
+	-webkit-border-top-left-radius:6px;
+	-moz-border-radius-topleft:6px;
+	border-top-left-radius:6px;
+	-webkit-border-top-right-radius:6px;
+	-moz-border-radius-topright:6px;
+	border-top-right-radius:6px;
+	-webkit-border-bottom-right-radius:6px;
+	-moz-border-radius-bottomright:6px;
+	border-bottom-right-radius:6px;
+	-webkit-border-bottom-left-radius:6px;
+	-moz-border-radius-bottomleft:6px;
+	border-bottom-left-radius:6px;
+	text-indent:0;
+	border:1px solid #dcdcdc;
+	display:block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	font-style:normal;
+        margin: 0 10px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #000000;
+}
+.button:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #005f82), color-stop(1, #0093c8) );
+	background:-moz-linear-gradient( center top, #005f82 5%, #0093c8 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#005f82', endColorstr='#0093c8');
+	background-color:#005f82;
+}.button:active {
+	position:relative;
+	top:1px;
+}
+span.enter-key:before{
+    content: "⏎";
+    font: 20px/20px Tahoma,Verdana,sans-serif;
+}
