--- a/views/css/wrapper.css
+++ b/views/css/wrapper.css
@@ -1,8 +1,129 @@
-div#header{
-    font-size: 30px;
-    background-color: #252525;
-    padding: 10px;
-    margin-top:-50px; height:30px;
+
+html {
+	overflow: auto;
+	background: #800000;
+}
+
+html:not(:nth-child(1)) { overflow: visible; }
+
+html, body {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	width: 100%;
+	height: 100%;
+        
+        background-color: #252525;
+        font-size: 14px;
+        font-family: "PTSansNarrowRegular";
+        color: #404040;
+}
+
+body {
+	font: 14px/120% Verdana, Tahoma, Arial, Helvetica, sans-serif;
+	position: relative;
+	width: 1000px;
+	margin: 0 auto;
+}
+
+#header {
+	height: 50px;
+	font-size: 30px;
+        background-color: #252525;
+	color: #FFF;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
+	left: 0;
+}
+
+#container > div {
+	padding-top: 50px !important;
+}
+
+#container {
+	padding-left: 300px;
+	/*padding-right: 200px;*/
+	overflow: hidden;
+	float: none;
+	height: auto !important;
+	height: 100%;
+	min-height: 100%;
+	background-color: #fff;
+	position: relative;
+}
+
+* html #container { overflow: visible; }
+
+#left, #content {
+	float: left;
+	position: relative;
+	padding-bottom: 10px !important;
+}
+
+@media all and (min-width: 0px) {
+	#left, #content {
+		margin-bottom: 0 !important; 
+		padding-bottom: 50px !important;
+	}
+
+	#left:before, #content:before {
+		content: 'EasyClearing';
+		display: block;
+		background: inherit;
+		padding-top: 1000em !important;
+		margin-bottom: -1000em !important;
+		height: 0;
+	}
+}
+
+#container:after {
+	content: 'EasyClear'; 
+	display: block; 
+	height: 0; 
+	clear: both; 
+	visibility: hidden;
+}
+
+#container { display: inline-block; }
+/*\*/
+#container { display: block; }
+/**/
+
+#left {
+	width: 300px;
+	background-color: #F3F3F3;
+	margin-left: -100%;
+	right: 300px;
+}
+
+* html #left {
+	left: 330px;
+}
+
+#content {
+	width: 100%;
+	background: #FFF;
+}
+
+#footer {
+	height: 30px;
+        padding-top:20px;
+	color: #868686;
+        text-align: center;
+	background-color: #252525;
+	position: relative;
+	z-index: 1000;
+	margin-top: -50px;
+	width: 100%;
+}
+    
+/* content */
+#header > *{
+    display:block;
+    padding-top:20px;
+    float:left;
 }
 a.logo > span.text-white{
     margin-left: -12px;
@@ -16,16 +137,14 @@ div#main-menu > a{
     float:left;
     padding: 0 10px;
     color:#868686;
+    font: 18px Trebuchet MS;
+}
+div#main-menu > a.active{
+    color:#fff;
 }
 div#main-menu > a:hover{
     color:#fff;
     transition: 1s;
-}
-div#footer{
-    padding: 10px;
-    color: #868686;
-    padding-top: 20px;
-    text-align: center;
 }
 .copyleft:before{
     content:"©";
