--- a/views/css/left-frame.css
+++ b/views/css/left-frame.css
@@ -17,12 +17,17 @@ div.add-account-form > table{
 }
 a#add-account-button > span.enter-key{
     position: absolute;
-    right: 20px;
+    padding-left: 2px;
+    padding-top: 3px;
+}
+a#add-account-button.form-active{
+    padding-right:25px;
 }
 
 div.account{
     float: left;
     width: 100%;
+    padding-bottom: 2px;
 }
 div.total-balance{
     margin-top: 10px;
